cluster/apps/onetimesecret/deployment-onetimesecret.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onetimesecret
  namespace: onetimesecret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onetimesecret
      component: frontend
  template:
    metadata:
      labels:
        app: onetimesecret
        component: frontend
    spec:
      containers:
      - image: quay.io/tdeutsch/onetimesecret:latest
        imagePullPolicy: Always
        name: onetimesecret
        ports:
        - containerPort: 7143
        resources:
          limits:
            cpu: 500m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /etc/onetime/config
          name: onetimesecret-config
          subPath: config
      volumes:
      - configMap:
          items:
          - key: config
            mode: 420
            path: config
          name: onetimesecret-config
        name: onetimesecret-config
