cluster/apps/onetimesecret/deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onetimesecret-redis
  namespace: onetimesecret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onetimesecret
      component: redis
  template:
    metadata:
      labels:
        app: onetimesecret
        component: redis
    spec:
      containers:
      - command:
        - redis-server
        image: redis:alpine3.13
        imagePullPolicy: Always
        name: redis
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: 500m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
