cluster/apps/onetimesecret/service-onetimesecret.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: onetimesecret
    component: frontend
  name: onetimesecret
  namespace: onetimesecret
spec:
  ports:
  - name: http
    port: 7143
    protocol: TCP
    targetPort: 7143
  selector:
    app: onetimesecret
    component: frontend
  type: ClusterIP
