cluster/apps/onetimesecret/service-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: onetimesecret
    component: redis
  name: onetimesecret-redis
  namespace: onetimesecret
spec:
  ports:
  - port: 6379
  selector:
    app: onetimesecret
    component: redis
